--- a/ATSProject/nbproject/project.properties
+++ b/ATSProject/nbproject/project.properties
@@ -41,7 +41,9 @@ j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.ja
 j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${reference.com_nbcc_ATSsystem.jar}:\
+    ${reference.com_nbcc_dataaccess.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -71,6 +73,10 @@ lib.dir=${web.docbase.dir}/WEB-INF/lib
 no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
+project.com_nbcc_ATSsystem=../com.nbcc.ATSsystem
+project.com_nbcc_dataaccess=../com.nbcc.dataaccess
+reference.com_nbcc_ATSsystem.jar=${project.com_nbcc_ATSsystem}/dist/com.nbcc.ATSsystem.jar
+reference.com_nbcc_dataaccess.jar=${project.com_nbcc_dataaccess}/dist/com.nbcc.dataaccess.jar
 resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
