--- a/com.nbcc.ATSsystem/nbproject/project.properties
+++ b/com.nbcc.ATSsystem/nbproject/project.properties
@@ -29,7 +29,8 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${reference.com_nbcc_dataaccess.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -57,6 +58,8 @@ javadoc.windowtitle=
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
 platform.active=default_platform
+project.com_nbcc_dataaccess=../com.nbcc.dataaccess
+reference.com_nbcc_dataaccess.jar=${project.com_nbcc_dataaccess}/dist/com.nbcc.dataaccess.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
