--- a/.gitignore
+++ b/.gitignore
@@ -21,5 +21,8 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-/ATSProject/nbproject/private/
+/ATSProject/nbproject/private/*
+/com.nbcc.dataaccess/nbproject/private/*
+/com.nbcc.ATSsystem/nbproject/private/*
 /ATSProject/build/
+
