added common files and source packages

--- a/ATSProject/web/WEB-INF/web.xml
+++ b/ATSProject/web/WEB-INF/web.xml
@@ -9,7 +9,33 @@
             30
         </session-timeout>
     </session-config>
+     <servlet>
+        <servlet-name>HomeView</servlet-name>
+        <jsp-file>/index.jsp</jsp-file>
+    </servlet>
+    <!--mapping-->
+     <servlet-mapping>
+        <servlet-name>HomeView</servlet-name>
+        <url-pattern>/home</url-pattern>
+    </servlet-mapping>
+     <!--Default Views-->
+    <servlet>
+        <servlet-name>404</servlet-name>
+        <jsp-file>/404.jsp</jsp-file>
+    </servlet>
+    <!--mapping-->
+     <servlet-mapping>
+        <servlet-name>404</servlet-name>
+        <url-pattern>/404</url-pattern>
+    </servlet-mapping>
+    
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
+    
+        
+    <error-page>
+	<error-code>404</error-code>
+	<location>/404</location>
+    </error-page>
 </web-app>
