--- a/ATSProject/web/WEB-INF/web.xml
+++ b/ATSProject/web/WEB-INF/web.xml
@@ -1,41 +1,68 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-         version="3.1">
+<web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
+   
     <session-config>
         <session-timeout>
             30
         </session-timeout>
     </session-config>
-     <servlet>
+    <servlet>
         <servlet-name>HomeView</servlet-name>
         <jsp-file>/index.jsp</jsp-file>
     </servlet>
     <!--mapping-->
-     <servlet-mapping>
+    
+    <servlet-mapping>
         <servlet-name>HomeView</servlet-name>
         <url-pattern>/home</url-pattern>
     </servlet-mapping>
-     <!--Default Views-->
+    <!--Default Views-->
     <servlet>
         <servlet-name>404</servlet-name>
         <jsp-file>/404.jsp</jsp-file>
     </servlet>
     <!--mapping-->
-     <servlet-mapping>
+    <servlet-mapping>
         <servlet-name>404</servlet-name>
         <url-pattern>/404</url-pattern>
     </servlet-mapping>
+    <servlet>
+        <servlet-name>CreateTaskView</servlet-name>
+        <jsp-file>/task.jsp</jsp-file>
+    </servlet>
+    <!--mapping-->
+    <servlet-mapping>
+        <servlet-name>CreateTaskView</servlet-name>
+        <url-pattern>/task/create</url-pattern>
+    </servlet-mapping>
+    <!--End Default Views -->
+        <!-- Controller Mapping -->
+
+    <servlet-mapping>
+        <servlet-name>TaskController</servlet-name>
+        <url-pattern>/tasks</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
+        <servlet-name>TaskController</servlet-name>
+        <servlet-class>com.nbcc.ATS.controllers.TaskController</servlet-class>
+    </servlet>
+    
+    <servlet-mapping>
+        <servlet-name>TaskController</servlet-name>
+        <url-pattern>/tasks</url-pattern>
+    </servlet-mapping>
+    
+    <servlet-mapping>
+        <servlet-name>TaskController</servlet-name>
+        <url-pattern>/task/*</url-pattern>
+    </servlet-mapping>    
     
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
-    
-        
     <error-page>
-	<error-code>404</error-code>
-	<location>/404</location>
+        <error-code>404</error-code>
+        <location>/404</location>
     </error-page>
 </web-app>
