--- a/com.nbcc.ATSsystem/nbproject/project.properties
+++ b/com.nbcc.ATSsystem/nbproject/project.properties
@@ -27,10 +27,12 @@ dist.dir=dist
 dist.jar=${dist.dir}/com.nbcc.ATSsystem.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.mysql-connector-java-8.0.12.jar=C:\\Users\\notil\\Downloads\\mysql-connector-java-8.0.12.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.com_nbcc_dataaccess.jar}
+    ${reference.com_nbcc_dataaccess.jar}:\
+    ${file.reference.mysql-connector-java-8.0.12.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
