--- a/.gitignore
+++ b/.gitignore
@@ -21,11 +21,11 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
 nbproject/private/
 build/
-
-/com.nbcc.dataaccess/dist/
-/com.nbcc.dataaccess/build/
-/com.nbcc.ATSsystem/dist/
-/com.nbcc.ATSsystem/build/
-/ATSProject/dist/
+dist/
+build-impl.xml
+genfiles.properties
+project.properties
+project.xml
