--- a/.gitignore
+++ b/.gitignore
@@ -22,9 +22,9 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-nbproject/private/
-build/
-dist/
+*/nbproject/private/
+*/build/
+*/dist/
 build-impl.xml
 genfiles.properties
 project.properties
