--- a/.gitignore
+++ b/.gitignore
@@ -22,10 +22,6 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-*/nbproject/private/
+*/nbproject/
 */build/
 */dist/
-build-impl.xml
-genfiles.properties
-project.properties
-project.xml
