--- a/ATSProject/web/WEB-INF/web.xml
+++ b/ATSProject/web/WEB-INF/web.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
-   
+    <servlet-mapping>
+        <servlet-name>TeamController</servlet-name>
+        <url-pattern>/TeamController</url-pattern>
+    </servlet-mapping>
     <session-config>
         <session-timeout>
             30
@@ -37,11 +40,6 @@
     </servlet-mapping>
     <!--End Default Views -->
         <!-- Controller Mapping -->
-
-    <servlet-mapping>
-        <servlet-name>TaskController</servlet-name>
-        <url-pattern>/tasks</url-pattern>
-    </servlet-mapping>
     
     <servlet>
         <servlet-name>TaskController</servlet-name>
@@ -57,6 +55,34 @@
         <servlet-name>TaskController</servlet-name>
         <url-pattern>/task/*</url-pattern>
     </servlet-mapping>    
+    
+    <!--mapping-->
+     <servlet>
+        <servlet-name>CreateTeamView</servlet-name>
+        <jsp-file>/team.jsp</jsp-file>
+    </servlet>
+    <!--mapping-->
+    <servlet-mapping>
+        <servlet-name>CreateTeamView</servlet-name>
+        <url-pattern>/team/create</url-pattern>
+    </servlet-mapping>
+    <!--End Default Views -->
+        <!-- Controller Mapping -->
+    <servlet>
+        <servlet-name>TeamController</servlet-name>
+        <servlet-class>com.nbcc.ATS.controllers.TeamController</servlet-class>
+    </servlet>
+    
+    <servlet-mapping>
+        <servlet-name>TeamController</servlet-name>
+        <url-pattern>/teams</url-pattern>
+    </servlet-mapping>
+    
+    <servlet-mapping>
+        <servlet-name>TeamController</servlet-name>
+        <url-pattern>/team/*</url-pattern>
+    </servlet-mapping>    
+    
     
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
