error page added

--- a/ATSProject/web/WEB-INF/web.xml
+++ b/ATSProject/web/WEB-INF/web.xml
@@ -111,11 +111,9 @@
         <servlet-name>EmployeeController</servlet-name>
         <url-pattern>/employee/*</url-pattern>
     </servlet-mapping>
-   
-
+  
     <!--mapping-->
 
-    
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
@@ -127,6 +125,13 @@
     <error-page>
         <error-code>404</error-code>
         <location>/404</location>
+    </error-page>
+    <error-page>
+        <exception-type>java.lang.Exception</exception-type>
+        <location>/error.jsp</location>
+    </error-page>
+    <error-page>
+        <location>/error.jsp</location>
     </error-page>
     
 </web-app>
