added create job functionality

--- a/ATSProject/src/java/com/properties/db.properties
+++ b/ATSProject/src/java/com/properties/db.properties
@@ -2,7 +2,7 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-database.url = jdbc:mysql://localhost/ats2021hotel?verifyServerCertificate=false&useSSL=false&serverTimezone=GMT
+database.url = jdbc:mysql://localhost/ats2021hotel?verifyServerCertificate=false&useSSL=false&serverTimezone=GMT-3
 database.username = dev
 database.password = Dev1234$
 database.driver = com.mysql.jdbc.Driver
